syntax = "proto3";

package graph_description;

// Used to identify the system for a given node
// for example, 'a process executed on cobrien-mbp'
message Host {
    oneof host_id {
        // the hostname of the host
        string hostname = 1;
        // the ip address of the host
        bytes ip = 2;

        // The asset ID itself
        // We expect this to be the variant once we have attributed the node
        string asset_id = 3;
    }
}

message NodeDescription {
    oneof which_node {
        ProcessDescription process_node = 1;
        FileDescription file_node = 2;
        IpAddressDescription ip_address_node = 3;
        OutboundConnection outbound_connection_node = 4;
        InboundConnection inbound_connection_node = 5;
    }
}

message OutboundConnection {
    string nodeKey = 1;
    Host host_id = 2;
    // 1 = Created, 2 = Terminated, 3 = Existing
    uint32 state = 3;
    uint64 timestamp = 4;
    uint32 port = 5;
}

message InboundConnection {
    string nodeKey = 1;
    Host host_id = 2;
    // 1 = Created, 2 = Terminated, 3 = Existing
    uint32 state = 6;
    uint64 timestamp = 7;
    uint32 port = 8;
}

message ProcessDescription {
    string nodeKey = 1;
    Host host_id = 2;
    // 1 = Created, 2 = Terminated, 3 = Existing
    uint32 state = 3;
    uint64 pid = 4;
    // When state == 1, create_time
    // When state == 2, end_time
    // When state == 3, seen_time
    uint64 timestamp = 5;
    bytes image_name = 6;
    bytes image_path = 7;
}

message FileDescription {
    string nodeKey = 1;
    Host host_id = 2;
    // 1 = Created, 2 = Deleted, 3 = Referenced
    uint32 state = 3;
    uint64 timestamp = 5;
    bytes path = 6;
}

message IpAddressDescription {
    string nodeKey = 1;
    uint64 timestamp = 2;
    bytes ip_address = 3;
}

message EdgeDescription {
    string fromNeighborKey = 1;
    string toNeighborKey = 2;
    string edgeName = 3;
}

message EdgeList {
    repeated EdgeDescription edges = 1;
}

message GraphDescription {
    map <string, NodeDescription> nodes = 1;
    map <string, EdgeList> edges = 2;
    uint64 timestamp = 3;
}

message GeneratedSubgraphs {
    repeated GraphDescription subgraphs = 1;
}




